plugins {
    id 'org.springframework.boot' version '2.4.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'jacoco'
    id "name.remal.sonarlint" version "1.5.0"
    id "com.avast.gradle.docker-compose" version "0.16.4"
    id 'com.palantir.docker' version '0.34.0'
    id 'com.palantir.docker-run' version '0.34.0'

    id 'org.liquibase.gradle' version '2.0.4'
}

group = 'com.social'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17"

String imageName = "$description:$version"
docker {
    dockerfile file('./Dockerfile')
    name imageName
    files "build/libs/${bootJar.archiveFileName.get()}"
    buildArgs([JAR_FILE: bootJar.archiveFileName.get()])
}

dockerRun {
    name project.name
    image imageName
    ports '8080:8080'
    clean true
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven {
        url "https://gitlab.idigicloudtech.com/api/v4/projects/15/packages/maven"
        name "GitLab"
    }
    mavenCentral()
}

//dockerCompose {
//    useComposeFiles = ['docker-compose.yml']
//    startedServices = ['yb-master', 'yb-tserver']
//    isRequiredBy(test)
//}

dependencies {
    implementation fileTree(dir: 'libs', includes: ['*.jar'])
    implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.12.1'
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:11.1.0'
    runtimeOnly 'com.graphql-java:graphql-java-extended-scalars:1.0.1'
    runtimeOnly 'com.graphql-java:graphql-java-extended-validation:16.0.0'
    compileOnly 'com.graphql-java:graphql-java-extended-validation:16.0.0'
    runtimeOnly 'com.graphql-java-kickstart:graphiql-spring-boot-starter:11.1.0'
    runtimeOnly 'com.graphql-java-kickstart:playground-spring-boot-starter:11.1.0'
    runtimeOnly 'com.graphql-java-kickstart:voyager-spring-boot-starter:11.1.0'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:11.1.0'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.24'
    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '21.6.0.0.1'
    implementation 'com.idg.idgcore.fmw.dto:com.idg.idgcore.fmw.dto:1.0-SNAPSHOT'
    implementation 'com.idg.idgcore.datatype:com.idg.idgcore.datatype:1.0-SNAPSHOT'
    implementation 'com.idg.idgcore.appcore:com.idg.idgcore.appcore:1.0-SNAPSHOT'
    implementation 'com.idg.idgcore.infra:com.idg.idgcore.infra:1.0-SNAPSHOT'
    implementation 'com.idg.idgcore.enumeration.fmw:com.idg.idgcore.enumeration.fmw:1.0-SNAPSHOT'
    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.9.0'
    implementation group: 'redis.clients', name: 'jedis', version: '4.2.3'
    implementation 'org.liquibase:liquibase-core:4.9.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.7.1'
    implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.9.2'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-server', version: '2.2.8.RELEASE'
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.7.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

check.dependsOn jacocoTestCoverageVerification, sonarlintMain

ext {
    jacocoEnabled = System.properties.getProperty("jacocoEnabled") ?: "false"
}

jacoco {
    toolVersion = "0.8.7"
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.3
            }
        }

        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.60
            }
        }

        rule {
            element = 'CLASS'
            includes = ['com.idg.*']
            excludes = [
                    'com/idg/idgcore/Application.class',
                    '**/config/**',
                    '**/currencyconfiguration/**',
                    '**/urn/**',
                    '**/memo/**',
                    '**/common/**',
                    '**/mutation/**',
                    '**/process/**',
                    '**/lov/**',
                    '**/exception/**'
            ]

            limit {
                counter = 'LINE'
                value = 'TOTALCOUNT'
                maximum = 1500
            }
        }
    }
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/idg/idgcore/Application.class',
                    '**/config/**',
                    '**/currencyconfiguration/**',
                    '**/urn/**',
                    '**/memo/**',
                    '**/common/**',
                    '**/mutation/**',
                    '**/process/**',
                    '**/lov/**',
                    '**/exception/**'
            ])
        }))
    }
}

springBoot {
    mainClass = 'com.idg.idgcore.Application'
}

compileJava {
    options.encoding = 'UTF-8'
}

targetCompatibility = JavaVersion.VERSION_17
